gatekeeperconstraint/requiredannotations.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snoappindefaultargoproject
  annotations:
    description: >-
      Restricts any ArgoCD Applications to be created in default ArgoCD project
spec:
  crd:
    spec:
      names:
        kind: K8sNoAppInDefaultArgoProject
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snoappindefaultargoproject
        violation[{"msg": def_msg}] {
          name := input.review.object.metadata.name
          mySpec := input.review.object.spec
          mySpec.project == "default"
          def_msg := sprintf("Error: `%v` ArgoCD Application is not permitted to use default ArgoCD project.",[name])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoAppInDefaultArgoProject
metadata:
  name: no-app-in-default-argo-project
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["argoproj.io/v1alpha1"]
        kinds: ["Application"]
